# qtpi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/qtpi-build/: Cargo.toml
crates/qtpi-build/src/: lib.rs
crates/qtpi-cli/: Cargo.toml  build.rs
crates/qtpi-cli/src/: admin.rs  builtins.rs  git.rs  kubectl.rs  main.rs
crates/qtpi-core/: Cargo.toml
crates/qtpi-core/src/: artifact.rs
crates/twocp-build/: Cargo.toml
crates/twocp-build/src/: lib.rs
crates/twocp-cli/: Cargo.toml  build.rs
crates/twocp-cli/src/: admin.rs  builtins.rs  git.rs  kubectl.rs  main.rs
crates/twocp-core/: Cargo.toml
crates/twocp-core/src/: engine.rs  lib.rs  parser.rs  protocol.rs  providers.rs  spec.rs
docs/: architecture.md  design.md  product-brief.md
providers-src/: git-minimal.json  kubectl-minimal.json
shell/zsh/: qtpi.zsh  qtpi_state_test.zsh  twocp.zsh  twocp_state_test.zsh
