[workspace]
members = ["crates/qtpi-build", "crates/qtpi-cli", "crates/qtpi-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.20.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
