[package]
name = "qtpi-build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
qtpi-core = { path = "../qtpi-core" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
