[package]
name = "qtpi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "qtpi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
qtpi-build = { path = "../qtpi-build" }
qtpi-core = { path = "../qtpi-core" }

[build-dependencies]
qtpi-build = { path = "../qtpi-build" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
