[package]
name = "twocp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "twocp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
twocp-build = { path = "../twocp-build" }
twocp-core = { path = "../twocp-core" }

[build-dependencies]
twocp-build = { path = "../twocp-build" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
